Fixed alignment of the update button

--- a/retroXchange/public/style.css
+++ b/retroXchange/public/style.css
@@ -7,6 +7,7 @@ COLORS:
 
 */
 
+
 * {
     font-family: "Audiowide", sans-serif;
     font-weight: 400;
@@ -957,6 +958,13 @@ footer > p {
     flex: 0 0 auto;
     margin: 0 auto;
     flex-direction: column;
+}
+
+.admin-addform > input[type="button"],
+.admin-addform > input[type="submit"] {
+    background-color: #ddffbc;
+
+    margin-left: 0px;
 }
 
 .input[type="button"],
